# agentic_ai_learning

./: README.md
open_ai_agent_sdk/uv/: Readme.md
open_ai_agent_sdk/uv/uv_project/project_1/: README.md  pyproject.toml
open_ai_agent_sdk/uv/uv_project/project_1/src/project_1/: __init__.py  hello.py
